feat(SUASSU-276): create address sql and add to users list
